# twin_md

./: .gitignore  ARCHITECTURE.md  DESIGN_BRIEF.md  PLAN.md  PLAN_V2.md  README.md  REMAINING_ASSETS.md  asset_generator.md  package-lock.json  package.json  tsconfig.base.json  twin-md_v3_brain.plan.md
.cursor/plans/: improvement_plan_v2_7f9cc620.plan.md
.github/workflows/: deploy-landing.yml  pages.yml
apps/desktop/: .gitignore  README.md  bubble.html  chat.html  index.html  onboarding.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: stage-assets.mjs
apps/desktop/src/: bubble.ts  chat-window.ts  chat.ts  companion.ts  ensure-tauri.ts  ipc.ts  onboarding.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: ai_agents.rs  chat.rs  commands.rs  context.rs  credentials.rs  harvest.rs  image_gen.rs  ipc.rs  lib.rs  main.rs  model.rs  paths.rs  presence.rs  profile.rs  provider.rs  rembg.rs  screentime.rs  sprite.rs  state.rs  tray.rs  webshell.rs  windows.rs
apps/landing/: .gitignore  astro.config.mjs  package.json  tsconfig.json
apps/landing/public/: 404.html  claude-starter.md
apps/landing/scripts/: stage-assets.mjs
apps/landing/src/: brand-marks.ts
apps/landing/src/components/: BrandMark.astro  BreathingSprite.astro  CozyNav.astro  IslandHero.astro  KarpathyGist.astro  SpeciesCard.astro  ThemeToggle.astro
apps/landing/src/layouts/: CozyLayout.astro
apps/landing/src/pages/: build-your-context.astro  how-it-works.astro  index.astro  install.astro  meet.astro  world.astro
apps/landing/src/styles/: global.css
docs/: BRAIN_CONVENTIONS.md  PLAN_V3_BRAIN.md  SOFT_LAUNCH_CHECKLIST_2026-04-26.md
docs/archive/2026-04-closeout/: IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_V2.md  REPORT.md  twin-md_v3_extensive_review_c8f30fba.plan.md
scripts/: add-shebang.mjs  clean.mjs  generate-pet-sprites-v2.mjs  generate-pet-sprites.mjs  release.sh  validate-pet-assets.mjs
