[package]
name = "twin-desktop"
version = "0.1.0"
edition = "2021"
description = "twin.md floating desktop companion."
authors = ["twin.md"]
license = "MIT"

[lib]
name = "twin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
notify = "7"
directories = "5"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
once_cell = "1"
url = "2"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# Shell-out to ioreg + osascript keeps us off objc2 for v1 (see PLAN_V2 §8.2).
